# LinguaForge-AI

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: auth.py  config.py  errors.py  main.py  schemas.py
backend/app/routers/: pronunciation.py  quiz.py  tutor.py
backend/app/services/: ai.py  scoring.py  usage.py
backend/tests/: test_ai_stream.py  test_auth.py  test_scoring.py  test_tutor_and_quiz.py  test_usage.py
docs/: SPEC.md
frontend/: package-lock.json  package.json
frontend/scripts/: seed.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(app)/: error.tsx  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: logo.tsx  theme-toggle.tsx
frontend/src/components/app/: bottom-nav.tsx  nav-items.ts  sidebar.tsx  user-menu.tsx
frontend/src/components/auth/: google-button.tsx
frontend/src/components/lesson/: lesson-player.tsx  quiz-question.tsx
frontend/src/components/quiz/: ai-quiz.tsx
frontend/src/components/settings/: settings-form.tsx
frontend/src/components/speech/: audio-button.tsx  pronunciation-studio.tsx
frontend/src/components/tutor/: explain-dialog.tsx  tutor-chat.tsx
frontend/src/components/ui/: button.tsx
frontend/src/data/: lessons.ts
frontend/src/lib/: actions.ts  api.ts  data.ts  speech.ts  types.ts  use-client-value.ts  validation.ts
supabase/migrations/: 0001_init.sql  0002_ai_usage_increment.sql
(+19 files in other folders)
