[project]
name = "linguaverse-backend"
version = "0.1.0"
description = "LinguaVerse AI backend — AI tutor, pronunciation scoring, quiz generation"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# B008: `Depends(...)` in argument defaults is the standard FastAPI DI pattern
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
